# trade-mobile/src/main/java/com/centaline/parportal/mobile/taskflow/web/MortgageSelectController.java
@@ -1,8 +1,5 @@
 package com.centaline.parportal.mobile.taskflow.web;
 
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -68,7 +65,7 @@ public class MortgageSelectController
 
     @RequestMapping(value = "process")
     @ResponseBody
-    public Object toProcess(HttpServletRequest request, HttpServletResponse response, String caseCode, String source, String taskitem, String processInstanceId)
+    public Object toProcess(String caseCode, String processInstanceId)
     {
         JSONObject jsonObject = new JSONObject();
 
@@ -85,9 +82,7 @@ public class MortgageSelectController
         plan.setPartCode("LoanRelease");// 放款
 
         jsonObject.put("processInstanceId", processInstanceId);
-        jsonObject.put("taskitem", taskitem);
         jsonObject.put("caseCode", caseCode);
-        jsonObject.put("source", source);
         jsonObject.put("caseBaseVO", caseBaseVO);
         jsonObject.put("loanReleasePlan", transplanServiceFacade.findTransPlan(plan));
 
